--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "basiclightbox": "^5.0.4",
     "gh-pages": "^3.2.3",
     "lodash.debounce": "^4.0.8",
-    "material-design-icons": "^3.0.1"
+    "material-design-icons": "^3.0.1",
+    "tui-pagination": "^3.4.1"
   }
 }
